IOT-1116 add name prefix for datatarget

--- a/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
+++ b/src/app/applications/datatarget/opendatadk/opendatadk-edit/opendatadk-edit.component.html
@@ -5,66 +5,66 @@
 </div>
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-        <label class="form-label" for="name">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-NAME' | translate}}</label>*
-        <input type="text" class="form-control" id="name" ame="name"
+        <label class="form-label" for="openDataDkDataset.name">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-NAME' | translate}}</label>*
+        <input type="text" class="form-control" id="openDataDkDataset.name" ame="openDataDkDataset.name"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-NAME-PLACEHOLDER' | translate" maxlength="120" required
             [(ngModel)]="openDataDk.name"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.name'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.name')}">
     </div>
 </div>
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION' | translate}}*</label>
-        <input type="text" class="form-control" id="description" name="description"
+            for="openDataDkDataset.description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION' | translate}}*</label>
+        <input type="text" class="form-control" id="openDataDkDataset.description" name="openDataDkDataset.description"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER' | translate" required
             [(ngModel)]="openDataDk.description"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.description'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.description')}">
     </div>
 </div>
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME' | translate}}</label>*
-        <input type="text" class="form-control" id="authorName" name="authorName"
+            for="openDataDkDataset.authorName">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME' | translate}}</label>*
+        <input type="text" class="form-control" id="openDataDkDataset.authorName" name="openDataDkDataset.authorName"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER' | translate" required
             [(ngModel)]="openDataDk.authorName"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorName'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorName')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.authorName'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.authorName')}">
     </div>
 </div>
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHOR-EMAIL' | translate}}</label>*
-        <input type="text" class="form-control" id="authorEmail" name="authorEmail"
+            for="openDataDkDataset.authorEmail">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHOR-EMAIL' | translate}}</label>*
+        <input type="text" class="form-control" id="openDataDkDataset.authorEmail" name="openDataDkDataset.authorEmail"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-AUTHOR-EMAIL-PLACEHOLDER' | translate" required
             [(ngModel)]="openDataDk.authorEmail"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorEmail'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorEmail')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.authorEmail'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.authorEmail')}">
     </div>
 </div>
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="description">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS' | translate}}</label>
-        <input type="text" class="form-control" id="keywordsInput" name="keywordsInput"
+            for="openDataDkDataset.keywordsInput">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS' | translate}}</label>
+        <input type="text" class="form-control" id="openDataDkDataset.keywordsInput" name="openDataDkDataset.keywordsInput"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER' | translate" required
             [(ngModel)]="openDataDk.keywordsInput"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('keywordsInput'), 'is-valid' : formFailedSubmit && !errorFields.includes('keywordsInput')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.keywordsInput'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.keywordsInput')}">
     </div>
 </div>
 
 <div class="row mb-2">
     <div class="form-group mt-3 col-12">
         <label class="form-label"
-            for="title">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE' | translate}}*</label>
-        <input type="text" class="form-control" id="resourceTitle" ame="resourceTitle"
+            for="openDataDkDataset.resourceTitle">{{'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE' | translate}}*</label>
+        <input type="text" class="form-control" id="openDataDkDataset.resourceTitle" name="openDataDkDataset.resourceTitle"
             [placeholder]="'OPENDATADK.QUESTION.GIVE-OPENDATADK-RESOURCETITLE-PLACEHOLDER' | translate" maxlength="120"
             required [(ngModel)]="openDataDk.resourceTitle"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('resourceTitle'), 'is-valid' : formFailedSubmit && !errorFields.includes('resourceTitle')}">
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('openDataDkDataset.resourceTitle'), 'is-valid' : formFailedSubmit && !errorFields.includes('openDataDkDataset.resourceTitle')}">
     </div>
 </div>
 
