--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -41,37 +41,37 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="jumbotron">
-                    <h3>{{ 'GATEWAY.STATS' | translate }}</h3>
-                    <div class="mat-elevation-z8">
-                        <table mat-table [dataSource]="dataSource">
-                            <ng-container matColumnDef="rxPacketsReceived">
-                                <th mat-header-cell *matHeaderCellDef>
-                                    {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
-                                </th>
-                                <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
-                            </ng-container>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12">
+        <div class="jumbotron">
+            <h3>{{ 'GATEWAY.STATS' | translate }}</h3>
+            <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+                    <ng-container matColumnDef="rxPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>
+                            {{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}
+                        </th>
+                        <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="txPacketsEmitted">
-                                <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
-                                </th>
-                                <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
-                            </ng-container>
+                    <ng-container matColumnDef="txPacketsEmitted">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}
+                        </th>
+                        <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
+                    </ng-container>
 
-                            <ng-container matColumnDef="txPacketsReceived">
-                                <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
-                                <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
-                            </ng-container>
+                    <ng-container matColumnDef="txPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
+                    </ng-container>
 
-                            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                        </table>
-                        <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons>
-                        </mat-paginator>
-                    </div>
-                </div>
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                <mat-paginator [length]="resultLength" [pageSizeOptions]="[5, 10, 20]" [pageSize]="pageSize" showFirstLastButtons>
+                </mat-paginator>
             </div>
         </div>
     </div>
