IOT-1115: Get organization from id if name is missing

--- a/src/app/search/search-table/search-table.component.html
+++ b/src/app/search/search-table/search-table.component.html
@@ -80,7 +80,7 @@
                 <th mat-header-cell *matHeaderCellDef>
                     {{ 'SEARCH.ORGANISATION' | translate }}</th>
                 <td mat-cell *matCellDef="let element">
-                    {{element.organizationName}}
+                    {{getOrganizationName(element)}}
                 </td>
             </ng-container>
 
