IOT-1140: Better errors for LoRaWAN devices

--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -5,7 +5,7 @@
   <div *ngIf="errorMessages" class="error-messages p-3">
     <ul class="mb-0">
       <li *ngFor="let error of errorMessages">
-        {{error}}
+        {{error | translate}}
       </li>
     </ul>
   </div>
