IOT-1139 - adding responsive view to top-header

--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-item/device-profiles-item.component.html
@@ -8,7 +8,7 @@
         <div class="col-3 pull-right d-flex align-items-center justify-content-end" *ngIf="deviceProfile.canEdit">
             <a (click)="onDeleteDeviceProfile()">
                 <div class="icon-list-wrapper text-center">
-                    <fa-icon [icon]="faTimesCircle" class="icon--primary"></fa-icon>
+                    <fa-icon [icon]="faTimesCircle" class="icon--primary icon--medium"></fa-icon>
                     <label class="label label--icon">{{'PROFILES.DEVICE_PROFILE.DELETE-FROM-LIST' | translate}}</label>
                 </div>
             </a>
