--- a/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
+++ b/src/app/applications/datatarget/datatarget-detail/datatarget-detail.component.html
@@ -55,7 +55,7 @@
                     </p>
                   </div>
                   <div class="col-md-1 d-flex align-items-center justify-content-center">
-                    <fa-icon [icon]="arrowsAltH" class="icon--primary icon--disabled"></fa-icon>
+                    <fa-icon [icon]="arrowsAltH" class="icon--primary icon--medium icon--disabled"></fa-icon>
                   </div>
                   <div class="col-md-7 d-flex align-items-center">
                     <p><strong>{{'DATATARGET.IOTDEVICE' | translate}}</strong>
