--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -16,33 +16,33 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-      &--menu {
+    &--menu {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      &--breadcrumb {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         align-items: center;
 
-        &--breadcrumb{
-          display: flex;
-          justify-content: flex-start;
-          align-items: center;
-
-          h3 {
-            margin-bottom: 0 !important;
-          }
+        h3 {
+          margin-bottom: 0 !important;
+          word-break: break-word;
         }
       }
-    
-
-      .search-form{
-
+    }
+    .search-form-wrapper {
+      align-self: center;
+      .search-form {
         @extend .mt-2;
-        &--full-width{ 
-          width: 100%;  
-          .search--input{
+        &--full-width {
+          width: 100%;
+          .search--input {
             width: 100%;
           }
 
-          .search-icon{
+          .search-icon {
             @extend .ml-2;
             display: flex;
             flex-direction: column;
@@ -50,7 +50,7 @@
             align-items: center;
           }
         }
-      
+      }
     }
   }
 }
@@ -59,7 +59,7 @@
   @extend .mb-3;
 
   .sub-bar {
-    h3{
+    h3 {
       margin-bottom: 0 !important;
     }
 
