--- a/src/assets/scss/elements/_icons.scss
+++ b/src/assets/scss/elements/_icons.scss
@@ -3,7 +3,7 @@
 
 .icon {
   &--primary {
-    font-size: $icon-size-medium;
+    font-size: $icon-size;
     color: $color-Icons-alternative;
   }
 
@@ -19,12 +19,16 @@
     color: $color-icon-label;
   }
 
+  &--medium {
+    font-size: $icon-size-medium;
+  }
+
   &--disabled {
     color: $color-Icons-light;
   }
 }
 
-.icon-list-wrapper{
+.icon-list-wrapper {
   display: inline-grid;
   padding-top: 5px;
   padding-right: 5px;
