IOT-1142 - alignment på fejlbesker på applikationer

--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -5,11 +5,11 @@
   </app-top-bar>
   <div class="container-fluid">
     <div class="row">
-      <div *ngIf="errorMessage" class="error-messages col-8 p-3 mx-4 my-3">
-        {{errorMessage | translate}}
-      </div>
       <div class="col-12">
         <div class="jumbotron">
+          <div *ngIf="errorMessage" class="error-messages p-3 my-3">
+            {{errorMessage | translate}}
+          </div>
           <h3>Detaljer</h3>
           <app-general-details [data]="application"></app-general-details>
           <p *ngIf="application.description">
