--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -7,8 +7,14 @@
                 {{ 'PERMISSION.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
-                <a (click)="routeToPermissions(element)" routerLinkActive="active" class="permission-link">
-                    {{element.name}}</a>
+                <a *ngIf="canAccess(element); else justText"
+                (click)="routeToPermissions(element)"
+                    routerLinkActive="active" class="permission-link">
+                {{element.name}}
+                </a>
+                <ng-template #justText>
+                    {{element.name}}
+                </ng-template>
             </td>
         </ng-container>
 
@@ -48,7 +54,7 @@
         <ng-container matColumnDef="menu">
             <th mat-header-cell *matHeaderCellDef></th>
             <td mat-cell *matCellDef="let element">
-                <div class="dropdown ">
+                <div class="dropdown " *ngIf="canAccess(element)">
                     <a href="#" role="button" id="tableRowDropdown-{{element.id}}"
                         class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
                         [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
