--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -25,9 +25,14 @@
 
           <!-- action buttons -->
           <div class="action-group d-flex justify-content-end">
-            <button *ngIf="ctaRouterLink && ctaRouterLink != ''" [routerLink]="ctaRouterLink" routerLinkActive="active"
+
+            <button *ngIf="ctaRouterLink && ctaRouterLink != '' && canEdit" [routerLink]="ctaRouterLink" routerLinkActive="active"
               class="btn btn-primary mr-1" type="button" [attr.aria-label]="ctaLabel">{{ctaLabel}}</button>
-            <div class="btn-group float-md-right dropdown" *ngIf="dropDownButton && addDetailDowndown === true">
+
+            <button *ngIf="dtRouterLink && dtRouterLink != ''" [routerLink]="dtRouterLink" routerLinkActive="active"
+            class="btn btn-primary mr-1" type="button" [attr.aria-label]="dtLabel">{{dtLabel}}</button>
+            
+            <div class="btn-group float-md-right dropdown" *ngIf="dropDownButton && addDetailDowndown === true && canEdit">
               <button type="button" id="dropdown-{{ data.name }}" class="btn btn-primary dropdown-toggle"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 {{dropDownButton.label}} <span class="caret"></span>
