IOT-1153: Frame count is numbers

--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -191,7 +191,7 @@
 
         <div class="form-group mt-5">
           <label class="form-label" for="fCntUp">{{'QUESTION.FCNTUP' | translate}}*</label>
-          <input type="text" id="fCntUp" name="fCntUp" maxLength="32"
+          <input type="number" id="fCntUp" name="fCntUp" maxLength="32"
             [placeholder]="'QUESTION.FCNTUP-PLACEHOLDER' | translate" class="form-control"
             [(ngModel)]="iotDevice.lorawanSettings.fCntUp"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('fCntUp'), 'is-valid' : formFailedSubmit && !errorFields.includes('fCntUp')}">
@@ -199,7 +199,7 @@
 
         <div class="form-group mt-5">
           <label class="form-label" for="nFCntDown">{{'QUESTION.NFCNTDOWN' | translate}}*</label>
-          <input type="text" id="nFCntDown" name="nFCntDown" maxLength="32"
+          <input type="number" id="nFCntDown" name="nFCntDown" maxLength="32"
             [placeholder]="'QUESTION.NFCNTDOWN-PLACEHOLDER' | translate" class="form-control"
             [(ngModel)]="iotDevice.lorawanSettings.nFCntDown"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('nFCntDown'), 'is-valid' : formFailedSubmit && !errorFields.includes('nFCntDown')}">
