IOT-1039: Only suggest to create organization if current user is global admin

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
                             </div>
                         </span>
                     </h1>
-                    <div class="row">
+                    <div class="row" *ngIf="isGlobalAdmin">
                         <div class="col-12 d-flex justify-content-center">
                             <a [routerLink]="['/admin/organisations']" routerLinkActive="router-link-active"
                                 class="btn btn-secondary btn--animated">Start med at oprette en organisation</a>
