--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -18,7 +18,7 @@
 
         <!-- Id Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef>{{ 'DEVICE-MODEL.ID' | translate }}</th>
+            <th mat-header-cell *matHeaderCellDef>{{ 'DEVICE-MODEL.TABLE.ID' | translate }}</th>
             <td mat-cell *matCellDef="let element">
                 {{ element.id }}
             </td>
