--- a/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-edit/service-profiles-edit.component.html
@@ -17,7 +17,7 @@
         <div class="col-xs-12 form-group">
             <label for="name"
                 class="form-label asterisk-if-mandatory">{{'PROFILES.SERVICE_PROFILE.NAME' | translate}}</label>
-            <input type="text" class="form-control" id="name" name="name"
+            <input type="text" class="form-control" id="name" name="name" [disabled]="!canEdit"
                 [placeholder]="'PROFILES.SERVICE_PROFILE.NAME_PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="serviceProfile.name"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
@@ -38,7 +38,8 @@
         <div class="col-xs-12">
             <div class="form-group">
                 <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DEVICEFREQUENCY' | translate}}</label>
-                <input type="text" id="devStatusReqFreq" name="devStatusReqFreq" class="form-control" [placeholder]="0"
+                <input type="text" id="devStatusReqFreq" name="devStatusReqFreq" [disabled]="!canEdit"
+                    class="form-control" [placeholder]="0" [disabled]="!canEdit"
                     [(ngModel)]="serviceProfile.devStatusReqFreq" step=".000001" min="-180" max="180" maxlength="9"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('devStatusReqFreq'), 'is-valid' : formFailedSubmit && !errorFields.includes('devStatusReqFreq')}"
                     (keyup)="onCoordinateKey($event)" />
@@ -47,46 +48,13 @@
         </div>
     </div>
 
-    <!-- <div class="row">
-        <div class="col-xs-12">
-            <div class="form-group">
-                <label for="dlRatePolicy" class="form-label">{{'PROFILES.SERVICE_PROFILE.DLRATEPOLICY' | translate}}</label>
-                <input type="text" id="dlRatePolicy" name="dlRatePolicy" class="form-control" [placeholder]="0" maxlength="1024"
-                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('dlRatePolicy'), 'is-valid' : formFailedSubmit && !errorFields.includes('dlRatePolicy')}"
-                    [(ngModel)]="serviceProfile.dlRatePolicy" maxlength="1024"/>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="form-group">
-                <label for="ulRatePolicy" class="form-label">{{'PROFILES.SERVICE_PROFILE.ULRATEPOLICY' | translate}}</label>
-                <input type="text" id="ulRatePolicy" name="ulRatePolicy" class="form-control" [placeholder]="0" maxlength="1024"
-                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('ulRatePolicy'), 'is-valid' : formFailedSubmit && !errorFields.includes('ulRatePolicy')}"
-                    [(ngModel)]="serviceProfile.ulRatePolicy" maxlength="1024"/>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12">
-            <div class="form-group">
-                <label for="channelMask" class="form-label">{{'PROFILES.SERVICE_PROFILE.CHANNELMASK' | translate}}</label>
-                <input type="text" id="channelMask" name="channelMask" class="form-control" [placeholder]="0"
-                    [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('channelMask'), 'is-valid' : formFailedSubmit && !errorFields.includes('channelMask')}"
-                    [(ngModel)]="serviceProfile.channelMask" maxlength="1024"/>
-            </div>
-        </div>
-    </div> -->
-
     <!-- Checkbox
                 Report device battery level to application-server
                -->
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group">
-                <mat-checkbox id="reportDevStatusBattery" name="reportDevStatusBattery"
+                <mat-checkbox id="reportDevStatusBattery" name="reportDevStatusBattery" [disabled]="!canEdit"
                     [(ngModel)]="serviceProfile.reportDevStatusBattery">
                     <label for="reportDevStatusBattery-input" class="form-check-label text--bold"
                         style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYSTATUS' | translate}}</label>
@@ -94,16 +62,13 @@
             </div>
         </div>
     </div>
-
-
-
     <!-- Checkbox
                 Report device link margin to application-server
                -->
     <div class="row">
         <div class="col-xs-12">
             <div class="form-group">
-                <mat-checkbox id="reportDevStatusMargin" name="reportDevStatusMargin"
+                <mat-checkbox id="reportDevStatusMargin" name="reportDevStatusMargin" [disabled]="!canEdit"
                     [(ngModel)]="serviceProfile.reportDevStatusMargin">
                     <label for="reportDevStatusMargin-input" class="form-check-label text--bold"
                         style="white-space: initial">{{'PROFILES.SERVICE_PROFILE.REPORTBATTERYMARGIN' | translate}}</label>
@@ -112,14 +77,12 @@
         </div>
     </div>
 
-
-
     <!-- DR MIN & MAX RATE -->
     <div class="row">
         <div class="col-6">
             <div class="form-group">
                 <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMIN' | translate}}</label>
-                <input type="number" id="drMin" name="drMin" class="form-control" [(ngModel)]="serviceProfile.drMin"
+                <input type="number" id="drMin" name="drMin" class="form-control" [(ngModel)]="serviceProfile.drMin" [disabled]="!canEdit"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('drMin'), 'is-valid' : formFailedSubmit && !errorFields.includes('drMin')}"
                     step="0" min="-180" max="180" maxlength="9" (keyup)="onCoordinateKey($event)" [placeholder]="0" />
                 <label>{{'PROFILES.SERVICE_PROFILE.DRRATEMINEXPLAINED' | translate}}</label>
@@ -128,7 +91,7 @@
         <div class="col-6">
             <div class="form-group">
                 <label for="name" class="form-label">{{'PROFILES.SERVICE_PROFILE.DRRATEMAX' | translate}}</label>
-                <input type="number" id="drMax" name="drMax" class="form-control" [(ngModel)]="serviceProfile.drMax"
+                <input type="number" id="drMax" name="drMax" class="form-control" [(ngModel)]="serviceProfile.drMax" [disabled]="!canEdit"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('drMax'), 'is-valid' : formFailedSubmit && !errorFields.includes('drMax')}"
                     step="0" min="-180" max="180" maxlength="9" (keyup)="onCoordinateKey($event)" [placeholder]="0" />
                 <Label>{{'PROFILES.SERVICE_PROFILE.DRRATEMAXEXPLAINED' | translate}}</Label>
@@ -143,7 +106,7 @@
                 <button type="button" class="btn btn-secondary" (click)="routeBack()">
                     {{'PROFILES.SERVICE_PROFILE.CANCEL' | translate}}
                 </button>
-                <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid'">
+                <button type="submit" class="btn btn-primary ml-3" [disabled]="!'is-valid' || !canEdit">
                     {{'PROFILES.SERVICE_PROFILE.SAVE' | translate}}
                 </button>
             </div>
