--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -13,14 +13,14 @@
     <div class="row mb-5">
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="name">{{'QUESTION.SIGFOX.DEVICETYPE.NAME' | translate}}</label>*
-            <input type="text" class="form-control" id="name" name="name"
+            <input type="text" class="form-control" id="name" name="name" [disabled]="!canEdit"
                 [placeholder]="'QUESTION.SIGFOX.DEVICETYPE.NAME-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="sigfoxDeviceType.name"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
         </div>
         <div class="form-group mt-3 col-12">
             <label class="form-label" for="alertEmail">{{'QUESTION.SIGFOX.DEVICETYPE.ALERTEMAIL' | translate}}</label>
-            <input type="text" class="form-control" id="alertEmail" name="alertEmail"
+            <input type="text" class="form-control" id="alertEmail" name="alertEmail" [disabled]="!canEdit"
                 [placeholder]="'QUESTION.SIGFOX.DEVICETYPE.ALERTEMAIL-PLACEHOLDER' | translate" maxlength="50" required
                 [(ngModel)]="sigfoxDeviceType.alertEmail"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('alertEmail'), 'is-valid' : formFailedSubmit && !errorFields.includes('alertEmail')}">
@@ -28,7 +28,7 @@
         <div class="form-group mt-3 col-12">
             <label class="form-label"
                 for="description">{{'QUESTION.SIGFOX.DEVICETYPE.DESCRIPTION' | translate}}</label>*
-            <input type="text" class="form-control" id="description" name="description"
+            <input type="text" class="form-control" id="description" name="description" [disabled]="!canEdit"
                 [placeholder]="'QUESTION.SIGFOX.DEVICETYPE.DESCRIPTION-PLACEHOLDER' | translate" maxlength="300"
                 required [(ngModel)]="sigfoxDeviceType.description"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}">
@@ -37,7 +37,7 @@
             <div class="form-group mt-3 col-12">
                 <mat-form-field appearance="fill">
                     <mat-label>{{'QUESTION.SIGFOX.DEVICETYPE.CHOOSE-CONTRACT' | translate}}</mat-label>
-                    <select matNativeControl name="contractId" 
+                    <select matNativeControl name="contractId" [disabled]="!canEdit"
                         [(ngModel)]="sigfoxDeviceType.contractId">
                         <option *ngFor="let contract of sigfoxContracts" 
                             [value]="contract.id"
@@ -53,6 +53,6 @@
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-secondary"
             type="button">{{ 'ORGANISATION.FORM.CANCEL' | translate}}</button>
-        <button class="btn btn-primary ml-2" type="submit">{{ 'SIGFOX-GROUP.PROFILES.SAVE' | translate}}</button>
+        <button class="btn btn-primary ml-2" [disabled]="!canEdit" type="submit">{{ 'SIGFOX-GROUP.PROFILES.SAVE' | translate}}</button>
     </div>
 </form>
