--- a/src/app/admin/permission/permission-list/permission-list.component.html
+++ b/src/app/admin/permission/permission-list/permission-list.component.html
@@ -1,4 +1,4 @@
-<app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.PERMISSIONS' | translate"
+<app-top-bar [pageLimit]="pageLimit" [title]="'NAV.PERMISSIONS' | translate"
     [ctaLabel]="'FORM.CREATE-NEW-PERMISSION' | translate" [ctaRouterLink]="'new-permission'"></app-top-bar>
 <div class="container-fluid">
     <div class="row">
