--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -25,7 +25,7 @@
             <label class="form-label" for="email">{{'USERS.FORM.EMAIL' | translate}}</label>*
             <input type="text" class="form-control" id="email" name="email" [disabled]="isKombit"
                 [placeholder]="'USERS.FORM.EMAIL-PLACEHOLDER' | translate" maxlength="50" required
-                [(ngModel)]="user.email"
+                [(ngModel)]="user.email" email ngModel
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('email'), 'is-valid' : formFailedSubmit && !errorFields.includes('email')}">
         </div>
     </div>
