--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -1,4 +1,7 @@
 <div class="mat-elevation-z8">
+    <div class="loading-shade" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
     <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
