--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -1,7 +1,7 @@
-<!-- <app-loading-spinner *ngIf="isLoadingResults; else showTable">
-</app-loading-spinner>
-<ng-template #showTable> -->
 <div class="mat-elevation-z8">
+    <div class="loading-shade" *ngIf="isLoadingResults">
+        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+    </div>
     <table mat-table [dataSource]="data" matSort matSortActive="id" matSortDirection="asc" matSortDisableClear>
 
         <!-- Name Column -->
