--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -374,3 +374,11 @@ $orange-outline: rgba(244, 121, 47, 0.6);
 
 $red-light: #f8e7e9;
 $red: #dc3545;
+
+.overflow-x-hidden {
+  overflow-x: hidden !important;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden !important;
+}
