IOT-1168 - removed top bar for user with no permissions

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <title>Grandma's Heavy Metal Festival Journal</title>
-<app-top-bar></app-top-bar>
+<div *ngIf="hasSomePermission">
+    <app-top-bar></app-top-bar>
+</div>
 <div class="container-fluid">
 
     <div class="row">
