--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -15,7 +15,7 @@
                             <app-data-package [latestReceivedMessage]="device.latestReceivedMessage">
                             </app-data-package>
                         </mat-tab>
-                        <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}">
+                        <mat-tab label="{{'IOTDEVICE.DOWNLINK-TAB' | translate}}" *ngIf="canStartDownlink">
                             <app-downlink [device]="device" [errorMessages]="errorMessages"></app-downlink>
                         </mat-tab>
                         <mat-tab *ngIf="device.type === 'GENERIC_HTTP'"
