--- a/src/app/sigfox/sigfox-groups-list/sigfox-groups-list-item/sigfox-groups-list-item.component.html
+++ b/src/app/sigfox/sigfox-groups-list/sigfox-groups-list-item/sigfox-groups-list-item.component.html
@@ -8,7 +8,7 @@
             </a>
 
         </div>
-        <div class="col-3">
+        <div class="col-3" *ngIf="canEdit">
             <a class="d-flex justify-content-center align-items-center" [routerLink]="[sigfoxGroup.id, 'edit-group']">
                 <fa-icon [icon]="faEdit"></fa-icon>
             </a>
